--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,6 +45,7 @@ jobs:
           cd _site && \
           curl -o ffmpeg-util.js "https://unpkg.com/@ffmpeg/util@0.12.0/dist/umd/index.js" && \
           curl -o ffmpeg.js "https://unpkg.com/@ffmpeg/ffmpeg@0.12.2/dist/umd/ffmpeg.js" && \
+          curl -o 814.ffmpeg.js "https://unpkg.com/@ffmpeg/ffmpeg@0.12.2/dist/umd/814.ffmpeg.js" && \
           curl -o ffmpeg-core.js "https://unpkg.com/@ffmpeg/core-mt@0.12.1/dist/umd/ffmpeg-core.js" && \
           curl -o ffmpeg-core.wasm "https://unpkg.com/@ffmpeg/core-mt@0.12.1/dist/umd/ffmpeg-core.wasm" && \
           curl -o ffmpeg-core.worker.js "https://unpkg.com/@ffmpeg/core-mt@0.12.1/dist/umd/ffmpeg-core.worker.js"
