--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -30,3 +30,7 @@ jobs:
           --browser "chrome@latest:Windows 11","firefox@latest:OS X Ventura","webkit@latest:OS X Ventura" \
           --cypress-config-file ./cypress.config.js \
           --spec ./cypress.spec.js
+      - name: 'BrowserStack Local Stop'
+        uses: 'browserstack/github-actions/setup-local@master'
+        with:
+          local-testing: stop
