Install cypress locally

--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -24,7 +24,7 @@ jobs:
       - name: 'Installing browserstack-cypress-cli'
         run: npm install -g browserstack-cypress-cli -d
       - name: 'Installing cypress'
-        run: npm install -g cypress -d
+        run: npm install cypress -d
       - name: 'Running test on BrowserStack with local testing enabled'
         run: |
           BROWSERSTACK_LOCAL=true \
