--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -5,6 +5,11 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+    paths-ignore:
+      - ".github/workflows/browsers.yml"
+      - "browserstack.*"
+      - "cypress.*"
+      - "test.*"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
