--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           BROWSERSTACK_LOCAL=true \
           browserstack-cypress run \
-          --browser "chrome@latest:Windows 11","firefox@latest:OS X Ventura","webkit@latest:OS X Ventura" \
+          --browser "chrome@latest:Windows 11" \
           --cypress-config-file ./cypress.config.js
       - name: 'BrowserStack Local Stop'
         uses: 'browserstack/github-actions/setup-local@master'
