--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -53,10 +53,10 @@ jobs:
                "https://unpkg.com/@ffmpeg/core-mt@0.12.2/dist/umd/ffmpeg-core.worker.js"
       - name: Patch to import Subworkers
         run: |
-          mkdir _orig && \
-          for i in extsub.js ffmpeg.js 814.ffmpeg.js ffmpeg-core.js ffmpeg-core.worker.js; do; \
-            mv _site/$i _orig/$i; \
-            echo 'importScripts("subworkers.js");' | cat _orig/$i > _site/$i; \
+          mkdir _orig
+          for i in extsub.js ffmpeg.js 814.ffmpeg.js ffmpeg-core.js ffmpeg-core.worker.js; do
+            mv _site/$i _orig/$i
+            echo 'importScripts("subworkers.js");' | cat _orig/$i > _site/$i
           done
       - name: Setup Pages
         uses: actions/configure-pages@v3
