--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,12 +1,8 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-    paths-ignore:
-      - "test.*"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,35 +20,52 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
+
+    env:
+      coi: 0.1.7
+      util: 0.12.1
+      ffmpeg: 0.12.7
+      core: 0.12.4
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Make directory
-        run: mkdir _site
-      - name: Copy files
-        run: cp index.html extsub.js extsub.css coi-config.js mp4txt.py _site
-      - name: Fetch coi
-        run: curl -o _site/coi-serviceworker.min.js "https://unpkg.com/coi-serviceworker@0.1.7/coi-serviceworker.min.js"
-      - name: Fetch ffmpeg
+      - uses: actions/checkout@v3
+
+      - run: mkdir _site
+
+      - id: cache
+        uses: actions/cache@v3
+          with:
+            path: deps
+            key: cache-${{env.coi}}-${{env.util}}-${{env.ffmpeg}}-${{env.core}}
+
+      - name: Fetch deps
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          cd _site && \
-          curl -o ffmpeg-util.js "https://unpkg.com/@ffmpeg/util@0.12.1/dist/umd/index.js" && \
-          wget "https://unpkg.com/@ffmpeg/ffmpeg@0.12.7/dist/umd/ffmpeg.js" \
-               "https://unpkg.com/@ffmpeg/ffmpeg@0.12.7/dist/umd/ffmpeg.js.map" \
-               "https://unpkg.com/@ffmpeg/ffmpeg@0.12.7/dist/umd/814.ffmpeg.js" \
-               "https://unpkg.com/@ffmpeg/ffmpeg@0.12.7/dist/umd/814.ffmpeg.js.map" \
-               "https://unpkg.com/@ffmpeg/core@0.12.4/dist/umd/ffmpeg-core.js" \
-               "https://unpkg.com/@ffmpeg/core@0.12.4/dist/umd/ffmpeg-core.wasm"
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-      - name: Deploy to GitHub Pages
+          mkdir deps
+          cd deps
+          curl -o coi-serviceworker.min.js \
+               "https://unpkg.com/coi-serviceworker@${coi}/coi-serviceworker.min.js"
+          curl -o ffmpeg-util.js \
+               "https://unpkg.com/@ffmpeg/util@${util}/dist/umd/index.js"
+          wget "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/ffmpeg.js" \
+               "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/ffmpeg.js.map" \
+               "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/814.ffmpeg.js" \
+               "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/814.ffmpeg.js.map" \
+               "https://unpkg.com/@ffmpeg/core@${core}/dist/umd/ffmpeg-core.js" \
+               "https://unpkg.com/@ffmpeg/core@${core}/dist/umd/ffmpeg-core.wasm"
+
+      - name: Copy files to _site
+        run: |
+          cp deps/* _site
+          cp index.html extsub.js extsub.css coi-config.js mp4txt.py _site
+
+      - uses: actions/configure-pages@v3
+      - uses: actions/upload-pages-artifact@v2
+      - uses: actions/deploy-pages@v2
         id: deployment
-        uses: actions/deploy-pages@v2
