--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -49,17 +49,24 @@ jobs:
         run: |
           mkdir deps
           cd deps
-          curl -Lo coi-serviceworker.min.js \
+          curl -sSLo coi-serviceworker.min.js \
             "https://unpkg.com/coi-serviceworker@${coi}/coi-serviceworker.min.js"
-          curl -Lo ffmpeg-util.js \
+          ls coi-serviceworker.min.js
+          curl -sSLo ffmpeg-util.js \
             "https://unpkg.com/@ffmpeg/util@${util}/dist/umd/index.js"
-          curl -LJO \
-            "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/ffmpeg.js" \
-            "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/ffmpeg.js.map" \
-            "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/814.ffmpeg.js" \
-            "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/814.ffmpeg.js.map" \
-            "https://unpkg.com/@ffmpeg/core@${core}/dist/umd/ffmpeg-core.js" \
-            "https://unpkg.com/@ffmpeg/core@${core}/dist/umd/ffmpeg-core.wasm"
+          ls ffmpeg-util.js
+          curl -sSLJO "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/ffmpeg.js"
+          ls ffmpeg.js
+          curl -sSLJO "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/ffmpeg.js.map"
+          ls ffmpeg.js.map
+          curl -sSLJO "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/814.ffmpeg.js"
+          ls 814.ffmpeg.js
+          curl -sSLJO "https://unpkg.com/@ffmpeg/ffmpeg@${ffmpeg}/dist/umd/814.ffmpeg.js.map"
+          ls 814.ffmpeg.js.map
+          curl -sSLJO "https://unpkg.com/@ffmpeg/core@${core}/dist/umd/ffmpeg-core.js"
+          ls ffmpeg-core.js
+          curl -sSLJO "https://unpkg.com/@ffmpeg/core@${core}/dist/umd/ffmpeg-core.wasm"
+          ls ffmpeg-core.wasm
 
       - run: |
           cp index.html extsub.js extsub.css coi-config.js mp4txt.py spinner.svg _site
